--- a/note.ipynb
+++ b/note.ipynb
@@ -1263,7 +1263,9 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1278,6 +1280,46 @@
    ],
    "source": [
     "x * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TerminateColor:\n",
+    "    HEADER = '\\033[95m'\n",
+    "    OKBLUE = '\\033[94m'\n",
+    "    OKGREEN = '\\033[92m'\n",
+    "    WARNING = '\\033[93m'\n",
+    "    FAIL = '\\033[91m'\n",
+    "    ENDC = '\\033[0m'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[95mHeader\u001b[0m\n",
+      "\u001b[94mOKBLUE\u001b[0m\n",
+      "\u001b[92mOKGREEN\u001b[0m\n",
+      "\u001b[93mWARNING\u001b[0m\n",
+      "\u001b[91mFAIL\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{TerminateColor.HEADER}Header{TerminateColor.ENDC}')\n",
+    "print(f'{TerminateColor.OKBLUE}OKBLUE{TerminateColor.ENDC}')\n",
+    "print(f'{TerminateColor.OKGREEN}OKGREEN{TerminateColor.ENDC}')\n",
+    "print(f'{TerminateColor.WARNING}WARNING{TerminateColor.ENDC}')\n",
+    "print(f'{TerminateColor.FAIL}FAIL{TerminateColor.ENDC}')"
    ]
   }
  ],
