:rocket: export generated images to TFRecord
- improve decorator for in-class usage
- add hash id to generated image
- add serialize and de-serialize methods (de-serialize not tested)
- update README
- change log file format
- generate metadata file
- sync last modified time for both dataset and metadata files

--- a/note.ipynb
+++ b/note.ipynb
@@ -1532,6 +1532,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiment with printing with color to console"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -1569,6 +1576,13 @@
     "print(f'{TerminateColor.OKGREEN}OKGREEN{TerminateColor.ENDC}')\n",
     "print(f'{TerminateColor.WARNING}WARNING{TerminateColor.ENDC}')\n",
     "print(f'{TerminateColor.FAIL}FAIL{TerminateColor.ENDC}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiment with escaping invalid filename characters for using in regular expression"
    ]
   },
   {
@@ -1704,6 +1718,334 @@
    ],
    "source": [
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiment with TFRecord"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.1.0'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The following functions can be used to convert a value to a type compatible\n",
+    "# with tf.Example.\n",
+    "\n",
+    "def _bytes_feature(value):\n",
+    "  \"\"\"Returns a bytes_list from a string / byte.\"\"\"\n",
+    "  if isinstance(value, type(tf.constant(0))):\n",
+    "    value = value.numpy() # BytesList won't unpack a string from an EagerTensor.\n",
+    "  return tf.train.Feature(bytes_list=tf.train.BytesList(value=[value]))\n",
+    "\n",
+    "def _float_feature(value):\n",
+    "  \"\"\"Returns a float_list from a float / double.\"\"\"\n",
+    "  return tf.train.Feature(float_list=tf.train.FloatList(value=[value]))\n",
+    "\n",
+    "def _int64_feature(value):\n",
+    "  \"\"\"Returns an int64_list from a bool / enum / int / uint.\"\"\"\n",
+    "  return tf.train.Feature(int64_list=tf.train.Int64List(value=[value]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bytes_list {\n",
+      "  value: \"test_string\"\n",
+      "}\n",
+      "\n",
+      "bytes_list {\n",
+      "  value: \"test_bytes\"\n",
+      "}\n",
+      "\n",
+      "float_list {\n",
+      "  value: 2.7182817459106445\n",
+      "}\n",
+      "\n",
+      "int64_list {\n",
+      "  value: 1\n",
+      "}\n",
+      "\n",
+      "int64_list {\n",
+      "  value: 1\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(_bytes_feature(b'test_string'))\n",
+    "print(_bytes_feature(u'test_bytes'.encode('utf-8')))\n",
+    "\n",
+    "print(_float_feature(np.exp(1)))\n",
+    "\n",
+    "print(_int64_feature(True))\n",
+    "print(_int64_feature(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\x12\\x06\\n\\x04T\\xf8-@'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature = _float_feature(np.exp(1))\n",
+    "\n",
+    "s = feature.SerializeToString()\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bytes"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.core.example.feature_pb2.Feature"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(feature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.core.example.feature_pb2.Feature"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_type = type(feature)\n",
+    "feature_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensorflow.core.example.feature_pb2.Feature,\n",
+       " google.protobuf.pyext._message.CMessage,\n",
+       " google.protobuf.message.Message,\n",
+       " object]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_type.mro()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiment with multiple decorators\n",
+    "\n",
+    "Especially with built-in decorator `@classmethod`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import wraps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def timedecorator(func):\n",
+    "    @wraps(func)\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        print('Hi from timedecorator!')\n",
+    "        print(f'calling {func.__name__}')\n",
+    "        retval = func(*args, **kwargs)\n",
+    "        return retval\n",
+    "\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Foo:\n",
+    "    i = 0\n",
+    "\n",
+    "    @classmethod\n",
+    "    def foo(cls, *args, **kwargs):\n",
+    "        print('cls', type(cls), cls)\n",
+    "        print('cls.i', cls.i)\n",
+    "        print('args', type(args), args)\n",
+    "        print('kwargs', type(kwargs), kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cls <class 'type'> <class '__main__.Foo'>\n",
+      "cls.i 0\n",
+      "args <class 'tuple'> ('hi',)\n",
+      "kwargs <class 'dict'> {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Foo.foo('hi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Bar:\n",
+    "    i = 2\n",
+    "    \n",
+    "    @classmethod\n",
+    "    @timedecorator\n",
+    "    def foo(cls, *args, **kwargs):\n",
+    "        print('cls', type(cls), cls)\n",
+    "        print('cls.i', cls.i)\n",
+    "        print('args', type(args), args)\n",
+    "        print('kwargs', type(kwargs), kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi from timedecorator!\n",
+      "calling foo\n",
+      "cls <class 'type'> <class '__main__.Bar'>\n",
+      "cls.i 2\n",
+      "args <class 'tuple'> ('hi',)\n",
+      "kwargs <class 'dict'> {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Bar.foo('hi')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Put built-in decorator on first"
    ]
   }
  ],
