:tada: retrieve image from tfrecord through api
- refractor code :bug:
- convert LF line ending using python script :penguin:
- change logging color :art:

--- a/note.ipynb
+++ b/note.ipynb
@@ -159,7 +159,7 @@
     }
    ],
    "source": [
-    "font_list"
+    "# font_list"
    ]
   },
   {
@@ -180,7 +180,7 @@
    ],
    "source": [
     "font = font_list[0]\n",
-    "font"
+    "# font"
    ]
   },
   {
@@ -750,24 +750,6 @@
    ],
    "source": [
     "logs = []\n",
-    "\n",
-    "# DEPRECATED\n",
-    "# for filename in file_list:\n",
-    "#     if not LOG_SUFFIX in filename:\n",
-    "#         print(f'[WARNING] Skipping file {filename}.')\n",
-    "#         continue\n",
-    "\n",
-    "#     filepath = os.path.join(LOG_DIRECTORY, filename)\n",
-    "\n",
-    "#     try:\n",
-    "#         log_data = pd.read_csv(filepath, sep=COLUMN_SEPARATOR, names=('method_name', 'execution_time'))\n",
-    "#     except:\n",
-    "#         print(f'[WARNING] Skipping incompatible format {filename}!')\n",
-    "#         continue\n",
-    "\n",
-    "#     ts = float(filename.replace(LOG_SUFFIX, ''))\n",
-    "#     log_file = LogFile(filename, ts, log_data)\n",
-    "#     logs.append(log_file)\n",
     "\n",
     "for filename in file_list:\n",
     "    if not LOG_SUFFIX in filename:\n",
@@ -2315,6 +2297,265 @@
    "source": [
     "repr(last_ex)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiment with reading TFRecord"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_tfrecord = 'datasets/hiragana/dataset.tfrecord'\n",
+    "os.path.exists(sample_tfrecord)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<TFRecordDatasetV2 shapes: (), types: tf.string>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_dataset = tf.data.TFRecordDataset(sample_tfrecord)\n",
+    "raw_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.python.data.ops.readers.TFRecordDatasetV2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(raw_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow_utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.python.data.ops.dataset_ops.MapDataset"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parsed_dataset = raw_dataset.map(TFRSerDes.read_record)\n",
+    "type(parsed_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for record in parsed_dataset:\n",
+    "    print(type(record))\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'CHARACTER': <tf.Tensor: shape=(), dtype=string, numpy=b'\\xe3\\x81\\x82'>,\n",
+       " 'DEPTH': <tf.Tensor: shape=(), dtype=int64, numpy=1>,\n",
+       " 'DESCRIPTION': <tf.Tensor: shape=(), dtype=string, numpy=b'\\xe3\\x81\\x82 grayscale image created with font kouichi.sakurai font felt pen_Regular at font size 64.'>,\n",
+       " 'FONT_NAME': <tf.Tensor: shape=(), dtype=string, numpy=b'kouichi.sakurai font felt pen_Regular'>,\n",
+       " 'FONT_SIZE': <tf.Tensor: shape=(), dtype=int64, numpy=64>,\n",
+       " 'HASH': <tf.Tensor: shape=(), dtype=string, numpy=b'00E91A9751CC0B445BAE875C8FEACF9F'>,\n",
+       " 'HEIGHT': <tf.Tensor: shape=(), dtype=int64, numpy=64>,\n",
+       " 'IMAGE': <tf.Tensor: shape=(), dtype=string, numpy=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x00@\\x00\\x00\\x00@\\x08\\x00\\x00\\x00\\x00\\x8f\\x02.\\x02\\x00\\x00\\x03\\xa4IDATx\\x9c\\xedV[HTQ\\x14]c\\x16\\xa9e\\x91\\x96\\x95B\\x16\\xa9}T\\x98Sa\\xe2\\xa34zPI\\xf4\\x80\\nz\\xf8Qf\\x85TB\\x14\\x11d%\\xfaa\\x10\\xf4\\xa4 \\x8d\\xc8\"\\xea\\xc3\\xec\\x81\\x06\\xd6G\\x92\\xd0;\\xc9^\\x82Zc\\x16ZFO\\xd3\\x99\\xbb\\xfb\\x98\\xbb\\xcf\\x9c{\\xef\\xdc\\xb9\\xe3\\xf8\\x15\\xb4\\x7f\\xee>{\\x9f\\xb5\\xf69{\\x9f\\xbb\\xcf\\x01\\xfe\\x8b\\xa9\\x9ch\\xec\\xa9\\x8a\\xeb\\x07>\\xa8\\x9b\\x88zJ\\xc3\\x03&\\x98@DD\\xf4iM\\xa0\\x04\\x0b\\xdc\\x04\\xf4\\xdcjb\\x90\\x89=^\\xfd\\x8e\\xee/A\\xe4\\xc0\\x00\\t\\x12\\xd4\\xaf-\\xc2j\\t&\\xd2\\xaa\\xe6\\xa0{@`\\xf8\\x10E%xf5\\xd3d\\x0bq6Uy\\x19 \\x01\\xe7\\x10\\x8d\\xfd%\\x98\\x93\\x88\\xc8\\x94\\x19\\xc1V4\\x00\\x86G\\xe7,L\\x8a\\x0e\\x06\\x80\\x81\\x93W\\xd5\\x13\\x8b\\xd2ED]%\\xc3\\xac\\xf0\\xdb\\xdd\\xd3]\\x1f\\x1f\\xdfj\\xe8!\\xa34\\'\\xfa\\xc6\\xdb\\xde{\\x01i\\xa4\\xc3\\xe4\\xd7Ts@\\xc5VK\\x8c\\\\\\xec\\x93\\x00\\xa7-\\xeb\\x15\\xed\\xdd\\xcc\\xf9uNN\\xb0\\xdb\\xed\\xd3\\x86\\x98\\x13\\x8c\\xb1\\x8a\\x00\\x00A\\x93\\xd6\\x96\\xbd\\xd3l\\xbd\\xfaf\\x1b\\x11\\x11\\xb5\\xd7,\\xf3\\x87\\x00\\x00\\x10\\x9fw\\xf5\\xb3 \\xd8\\x00\\x8c\\xcc\\\\\\x9a\\xd1\\xd7_*h\\x1b\\x13\\x1c\\xf6\\xe7\\x0cy\\x91\\xa5\\x9e\\x03p\\xad\\x97\\xa8\\xb9\\xb2p\\x9e\\x8f\\xf4\\xf8$\\x10\\xd2[\\xb7\\xab\\x0f]z\\x8d\\xf7\\xd3\\xf4(\\xcf\\xf2H\\xbbe\\xdd\\x0f\\xb3\\x03\\xf9\\xb34\\xca\\x1a\\x1eV\\xee\\xebL\\xff*\\x1al\\x81\\x9f\\xf2\\xd2\\x17\\x9e\\x88\\xdef\\xf9\\xc4o\\xfa\\xad\\x89w\\xe7hnJx\\xc8\\xc8\\xa9+\\x8b\\xea\\x9dlT\\x0e\\x98\\xf5b \\xfc\\x926\\xdaM\\xc97j\\xe7\\x176W\\x0f7\\xc1\\xdb\\x9bt\\xcb\\xad\\x90\\xbd\\xeb\\x14a\\x7f\\xea=\\x97\\xf9\\x7f\\xf4\\xfb=)y\\x17\\xf4J\\x8e71^\\xf0%\\xc6\\x84I}b\\xba\\xb6\\xb6\\xb56\\x03>[1\\x12\\xec\\xf6\\xb8\\x1f\\xe8\\\\\\xeb\\xf5\\xf8\\xf1]F<\\xe5\\t\\xf7\\\\\\xbd\\xabA\\x87\\xb7\\xdd\\x17\\xae\\xde\\x8a\\x1aV\\xf3\\x85\\xff\\xae\\x81\\xdc\\xae%\\xd8(\\x1c\\x1d\\xb3\\xb1\\x9a\\xf5\\xe3\\xec^a\\\\\\xddN\\r>\\xa2\\x93\\xed\\xcfb\\x81\\x02\\x1e\\xdcR\\xdd!-F\\x822@\\xba\\x99\\x0eq\\xd3iNo\\x01\\x86\\xb2\\xb9[\\xfd\\x96\\x8cc\\xcb\\x9e\\x14\\x85c\\xca\\x0b\\x18\\xc3\\'@\\x99\\x05\\x00\\xc5\\x1c\\xe5\\xac\\xdb=_\\x14\\xa8)8\\x93\\xd5\\x1b\\xf2\\nv\\x0cR\\x95\\xb2\\xfbr`t\\x01\\x00b\\xcaE\\xd1\\xf7;3Xm\\x95\\x08\\x86\\xe5\\xaaF\\xe7A\\x00\\xc0W\\rAX\\x95x*5V \\x9d\\xf5\\x16\\x89`\\x15?\\x08\\xabZ<>AP\\x9e(\\xb6\\xbaO\\x19\\x94\\xcc\\xfa+)\\x05\\xb5\\xbc\\xaf\\xe5\\xee\\xf1D\\x1eo\\x07\\xb0\\xd0\\x93\\xf8\\x876\\xa4\\xb2\\xae\\x8c\\xf0\\xe0\\xa3\\\\\\xaa\\xd1\\xc5=\\xef\\x93(U\\xd4)\\xd1\\x07\\xc89\\x17\\xd8+\\xca--`3\\x1b\\xc5\\xbb\\x92\\xbbZ\\xeb\\xfe\\x0eO\\xfc\\x1f\\x8b\\x00T\\xf3\\xa8D\"(d\\xe3e\\xb6\\xcc3\\x9e\\x1bj\\x9b\\x06 \\xf8;\\x0f\\xdd/Aw\\x12E\\x91\\x1c\\xac\\xdc\\x963\\xe4\\x96\\x86\\xe4\\'\\x00\\x92\\xf8\\x82\\xb9\\xf7Z\"\\xe8\\xd4$\\x1d\\x00\\xa8P\\x8f\\xafI}\\x0f\\xc0S\\xc4RH\\x04\\xe2q@b\\xfe\\xa5GZ\\xfc\\x85E\\xdf\\x00\\x00\\xdc\\x88\\xea*e\\x82\\xfa_\\xaay\\xac\\x00LP \\x89\\xf3X\\x8eS\\xc3\\xf7\\xa5@\\xcb\\x7f\\x9e\\xeb\\x94\\x06\\x00\\xb6\\xe4\\xe2\\x17\\x9a\\xf4U&\\x88\\x99G\\x88\\x88^o\\t\\xd5m0\\x8e/\\x83w3\\x13\\x97\\x9c\\xf9\\xa8K\\xffuifhV\\xe1\\xe5lc;\\xc4V\\x17\\x99H\\xf7\\xc5L/\\xf3\\x8d\\x92\\xf5\\xc1+\\xfc\\xc5\\x0e\\xbf\\x1f\\'\\x11G\\x0c\\x97B\\xcf\\xb9T\\x7f\\xd1\\x00\\x80\\xd8Ri\\x15NG\\xfd\\x95\\x1c?@\\xda\\xed\\rHKM\\x0eos8\\x1c\\x8e\\xb6vW\\x9f\\x82\\xff\\xcb\\xf2\\x17+L(\\x07\\xecu\\xa0\\x98\\x00\\x00\\x00\\x00IEND\\xaeB`\\x82'>,\n",
+       " 'WIDTH': <tf.Tensor: shape=(), dtype=int64, numpy=64>}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=string, numpy=b'00E91A9751CC0B445BAE875C8FEACF9F'>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "record_hash = record[TFRSerDes.HASH_KEY]\n",
+    "record_hash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.python.framework.ops.EagerTensor"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(record_hash)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bytes"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash_bytes = record_hash.numpy()\n",
+    "type(hash_bytes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'00E91A9751CC0B445BAE875C8FEACF9F'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash_bytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'00E91A9751CC0B445BAE875C8FEACF9F'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash_bytes.decode('utf-8')"
+   ]
   }
  ],
  "metadata": {
@@ -2333,7 +2574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
