:ambulance: migrate scripts to use new serialization format

--- a/training-note.ipynb
+++ b/training-note.ipynb
@@ -127,7 +127,7 @@
     "dataset_dir = os.path.join(datasets_dir, name)\n",
     "\n",
     "metadata_filepath = os.path.join(dataset_dir, METADATA_FILENAME)\n",
-    "tfrecord_filepath = os.path.join(dataset_dir, TFRECORD_FILENAME)\n",
+    "serialized_dataset_filepath = os.path.join(dataset_dir, SERIALIZED_DATASET_FILENAME)\n",
     "\n",
     "json_obj = json.load(open(\n",
     "    metadata_filepath,\n",
@@ -141,7 +141,7 @@
     "    name=name,\n",
     "    path=dataset_dir,\n",
     "    metadata_filepath=metadata_filepath,\n",
-    "    tfrecord_filepath=tfrecord_filepath,\n",
+    "    serialized_dataset_filepath=serialized_dataset_filepath,\n",
     "    metadata=metadata,\n",
     ")"
    ]
